syntax = "proto3";

package core;
option go_package = "/pb";
import "google/protobuf/empty.proto";

service CoreService {
  rpc GetCompany(GetCompanyRequest) returns (GetCompanyResponse) {}
  rpc CreateCompanyAndOwner(CreateCompanyAndOwnerRequest) returns (CreateCompanyAndOwnerResponse) {}
  rpc UpdateCompany(UpdateCompanyRequest) returns (UpdateCompanyResponse) {}
  rpc GetIndustries(google.protobuf.Empty) returns (GetIndustriesResponse) {}

  rpc CreateEmployee(CreateEmployeeRequest) returns (CreateEmployeeResponse) {}
  rpc UpdateEmployee(UpdateEmployeeRequest) returns (UpdateEmployeeResponse) {}
  rpc DeleteEmployee(DeleteEmployeeRequest) returns (google.protobuf.Empty) {}
  rpc GetCompanyEmployees(GetCompanyEmployeesRequest) returns (GetCompanyEmployeesResponse) {}
  rpc GetEmployeeByName(GetEmployeeByNameRequest) returns (GetEmployeeByNameResponse) {}
  rpc GetEmployeeById(GetEmployeeByIdRequest) returns (GetEmployeeByIdResponse) {}

  rpc CreateContact(CreateContactRequest) returns (CreateContactResponse) {}
  rpc UpdateContact(UpdateContactRequest) returns (UpdateContactResponse) {}
  rpc DeleteContact(DeleteContactRequest) returns (google.protobuf.Empty) {}
  rpc GetContacts(GetContactsRequest) returns (GetContactsResponse) {}
  rpc GetContactById(GetContactByIdRequest) returns (GetContactByIdResponse) {}
}

message Company {
  uint64 id = 1;
  string name = 2;
  string description = 3;
  string industry = 4;
  uint64 owner_id = 5;
  double rating = 6;
  int64 creation_date = 7;
  bool is_deleted = 8;
}

message Employee {
  uint64 id = 1;
  uint64 company_id = 2;
  string first_name = 3;
  string second_name = 4;
  string email = 5;
  string password = 6;
  string job_title = 7;
  string department = 8;
  string image_url = 9;
  int64 creation_date = 10;
  bool is_deleted = 11;
}

message Contact {
  uint64 id = 1;
  uint64 owner_id = 2;
  uint64 employee_id = 3;
  string notes = 4;
  int64 creation_date = 5;
  bool is_deleted = 6;
  Employee empl = 7;
}

message GetCompanyRequest {
  uint64 id = 1;
}

message GetCompanyResponse {
  Company company = 1;
}

message CreateCompanyAndOwnerRequest {
  Company company = 1;
  Employee owner = 2;
}

message CreateCompanyAndOwnerResponse {
  Company company = 1;
  Employee owner = 2;
}

message UpdateCompanyRequest {
  uint64 company_id = 1;
  uint64 owner_id = 2;
  UpdateCompanyFields upd = 3;
}

message UpdateCompanyFields {
  string name = 1;
  string description = 2;
  string industry = 3;
  uint64 owner_id = 4;
}

message UpdateCompanyResponse {
  Company company = 1;
}

message GetIndustriesResponse {
  map <string, uint64> data = 1;
}

message CreateEmployeeRequest {
  uint64 company_id = 1;
  uint64 owner_id = 2;
  Employee employee = 3;
}

message CreateEmployeeResponse {
  Employee employee = 1;
}

message UpdateEmployeeRequest {
  uint64 company_id = 1;
  uint64 owner_id = 2;
  uint64 employee_id = 3;
  UpdateEmployeeFields upd = 4;
}

message UpdateEmployeeFields {
  string first_name = 1;
  string second_name = 2;
  string job_title = 3;
  string department = 4;
  string image_url = 5;
}

message UpdateEmployeeResponse {
  Employee employee = 1;
}

message DeleteEmployeeRequest {
  uint64 company_id = 1;
  uint64 owner_id = 2;
  uint64 employee_id = 3;
}

message GetCompanyEmployeesRequest {
  uint64 company_id = 1;
  uint64 employee_id = 2;
  FilterEmployee filter = 3;
}

message FilterEmployee {
  bool by_job_title = 1;
  string job_title = 2;
  bool by_department = 3;
  string department = 4;
  int64 limit = 5;
  int64 offset = 6;
}

message GetCompanyEmployeesResponse {
  repeated Employee list = 1;
  uint64 amount = 2;
}

message GetEmployeeByNameRequest {
  uint64 company_id = 1;
  uint64 employee_id = 2;
  EmployeeByName ebn = 3;
}

message EmployeeByName {
  string pattern = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message GetEmployeeByNameResponse {
  repeated Employee list = 1;
  uint64 amount = 2;
}

message GetEmployeeByIdRequest {
  uint64 company_id = 1;
  uint64 employee_id = 2;
  uint64 employee_id_to_find = 3;
}

message GetEmployeeByIdResponse {
  Employee employee = 1;
}

message CreateContactRequest {
  uint64 owner_id = 1;
  uint64 employee_id = 2;
}

message CreateContactResponse {
  Contact contact = 1;
}

message UpdateContactRequest {
  uint64 owner_id = 1;
  uint64 contact_id = 2;
  UpdateContactFields upd = 3;
}

message UpdateContactFields {
  string notes = 1;
}

message UpdateContactResponse {
  Contact contact = 1;
}

message DeleteContactRequest {
  uint64 owner_id = 1;
  uint64 contact_id = 2;
}

message GetContactsRequest {
  uint64 owner_id = 1;
  GetContactsPagination pagination = 2;
}

message GetContactsPagination {
  int64 limit = 1;
  int64 offset = 2;
}

message GetContactsResponse {
  repeated Contact list = 1;
  uint64 amount = 2;
}

message GetContactByIdRequest {
  uint64 owner_id = 1;
  uint64 contact_id = 2;
}

message GetContactByIdResponse {
  Contact contact = 1;
}
